Bug 875135: IonMonkey: Don't reorder operands when constant is already in rhs, r=sstangl